# agilkia

./: .gitignore  CHANGELOG.md  DEVELOPERS.md  LICENSE.txt  README.md  developers_agilkia.yml  pyproject.toml  trace_analyser.py  trace_generator.py
agilkia/: __init__.py  data_generator.py  json_traces.py  optimize_trace_set.py  random_tester.py  trace_set_optimizer.py
docs/source/: agilkia.rst  conf.py  example.rst  index.rst  modules.rst  overview.rst
examples/eshop/: OpenCartAction.txt  README.txt  analyse_eshop.py  read_eshop_log.py
examples/scanner/: .gitignore  1026-steps.csv  README.txt  analyse_scanette2.py  choose_regression_tests.py  cluster_hierarchical.py  clusters_out.txt  demo_generate_params.py  demo_optimize.py  generate_missing_tests_scanette.py  read_scanette_csv.py  test_clusters_out.txt  test_scanner.py  tests_1571927354131.csv  write_scanette_csv.py
test/: generate_test_traces.py  run_system_tests.sh  test_SmartSequenceGenerator.py  test_TraceSetOptimizer.py  test_data_generator.py  test_json_traces.py  test_random_tester.py  test_scanner.py
test/expected/: out.json  traces1_analysed.txt
test/fixtures/: 1026-steps.json  inputs1.csv  not_smart_scanner.json  not_smart_scanner_new.json  scanner.json  smart_scanner.json  smart_scanner_new.json  traces1.json  traces_0_1_4.json  traces_0_2_0.json  traces_0_2_1_flat.json  traces_0_2_1_hier.json  traces_pickled.json
tools/: agilkia2robot.py  choose_regression_tests.py  csv2agilkia.py  demo_csv.sh  demo_json.sh  demo_spree.sh  generate_tests.py  inputs.csv  view_traces.py
