[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "agilkia"
author = "Mark Utting"
author-email = "m.utting@uq.edu.au"
home-page = "https://github.com/utting/agilkia"
description-file = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Testing"
]
keywords = "automated testing, smart testing, machine learning test models, Philae"
requires-python = ">=3.7"
requires = [
    "flit>=3.0",
    "ipython>=7.13.0",
    "jsonpickle>=1.3",
    "matplotlib>=3.2",
    "pandas>=1.0.3",
    "pillow>=7.0",
    "pip>=20.0",
    "requests>=2.23",
    "scikit-learn>=0.22",
    "scipy>=1.4.1",
    "zeep>=3.4",
    # "liac-arff>=2.5.0"   # install manually with pip, since conda-build cannot find this.
]
[tool.flit.metadata.requires-extra]
test = [
    "pytest >=6.2.0",
    "pytest-cov>=2.11",
    "mypy>=0.740"
]
# doc = ["sphinx"]


